[gd_scene load_steps=7 format=3 uid="uid://c14muw5rkx14y"]

[ext_resource type="Script" uid="uid://c3wy66wyd6mcv" path="res://classes/user_interface/status_panel.gd" id="1_0e522"]
[ext_resource type="Texture2D" uid="uid://yreravl65ew8" path="res://assets/ui/statePanel/bar_over.png" id="2_anpet"]
[ext_resource type="Texture2D" uid="uid://c4r2mnr6yw4ek" path="res://assets/ui/statePanel/states.png" id="3_anpet"]

[sub_resource type="AtlasTexture" id="AtlasTexture_884pa"]
atlas = ExtResource("3_anpet")
region = Rect2(0, 0, 56, 4)

[sub_resource type="AtlasTexture" id="AtlasTexture_0saum"]
atlas = ExtResource("3_anpet")
region = Rect2(0, 4, 56, 4)

[sub_resource type="AtlasTexture" id="AtlasTexture_fpf76"]
atlas = ExtResource("3_anpet")
region = Rect2(0, 8, 56, 4)

[node name="StatusPanel" type="VBoxContainer"]
offset_right = 58.0
offset_bottom = 26.0
script = ExtResource("1_0e522")

[node name="HealthPointBar" type="TextureProgressBar" parent="."]
layout_mode = 2
max_value = 1.0
step = 0.0
value = 1.0
texture_over = ExtResource("2_anpet")
texture_progress = SubResource("AtlasTexture_884pa")
texture_progress_offset = Vector2(1, 1)

[node name="MagicPointBar" type="TextureProgressBar" parent="."]
layout_mode = 2
max_value = 1.0
step = 0.0
value = 1.0
texture_over = ExtResource("2_anpet")
texture_progress = SubResource("AtlasTexture_0saum")
texture_progress_offset = Vector2(1, 1)

[node name="StaminaPointBar" type="TextureProgressBar" parent="."]
layout_mode = 2
max_value = 1.0
step = 0.0
value = 1.0
texture_over = ExtResource("2_anpet")
texture_progress = SubResource("AtlasTexture_fpf76")
texture_progress_offset = Vector2(1, 1)
